--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,12 @@
+[[headers]]
+  for = "/*"
+  [headers.value]
+    SameSite = "STRICT"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    Content-Security-Policy-Report-Only = "default-src 'none'; style-src 'none'; form-action 'none'; script-src 'none'; connect-src 'none'; img-src 'none'; base-uri 'none'; object-src 'none'; require-trusted-types-for 'script';"
+
 [build]
   command = "npm run generate"
   publish = "dist"
@@ -7,3 +16,4 @@
 
 [context.deploy-preview.environment]
   NODE_ENV = "development"
+
