--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,21 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
-    Content-Security-Policy-Report-Only = "default-src 'self'; style-src 'self'; script-src 'self'; img-src 'self'; base-uri 'none'; connect-src 'none'; form-action 'none'; object-src 'none'; require-trusted-types-for 'script';"
+    Content-Security-Policy-Report-Only = '''
+    default-src 'self';
+
+    font-src 'self' fonts.gstatic.com;
+    frame-src 'self';
+    img-src 'self';
+    media-src 'self';
+    script-src 'self';
+    style-src 'self' fonts.googleapis.com;
+
+    base-uri 'none';
+    connect-src 'none';
+    form-action 'none';
+    object-src 'none';
+    require-trusted-types-for 'script';'''
 
 [build]
   command = "npm run generate"
