--- a/netlify.toml
+++ b/netlify.toml
@@ -10,10 +10,10 @@
 
     font-src 'self' fonts.gstatic.com;
     frame-src 'self';
-    img-src 'self';
+    img-src 'self' data:;
     media-src 'self';
-    script-src 'self';
-    style-src 'self' fonts.googleapis.com;
+    script-src 'self' 'unsafe-inline';
+    style-src 'self' 'unsafe-inline' fonts.googleapis.com;
 
     base-uri 'none';
     connect-src 'none';
