--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@
     img-src 'self' data:;
     media-src 'self';
     script-src 'self' 'unsafe-inline';
-    style-src 'self' 'unsafe-inline' fonts.googleapis.com;
+    style-src 'self' fonts.googleapis.com;
 
     base-uri 'none';
     connect-src 'none';
