--- a/netlify.toml
+++ b/netlify.toml
@@ -13,13 +13,12 @@
     img-src 'self' data:;
     media-src 'self';
     script-src 'self' 'unsafe-inline';
-    style-src 'self' fonts.googleapis.com;
+    style-src 'self' 'unsafe-inline' fonts.googleapis.com;
 
     base-uri 'none';
     connect-src 'none';
     form-action 'none';
-    object-src 'none';
-    require-trusted-types-for 'script';'''
+    object-src 'none';'''
 
 [build]
   command = "npm run generate"
