--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,7 @@
     frame-src 'self';
     img-src 'self' data:;
     media-src 'self';
-    script-src 'self' 'unsafe-inline';
+    script-src 'self';
     style-src 'self' 'unsafe-inline' fonts.googleapis.com;
 
     base-uri 'none';
