--- a/netlify.toml
+++ b/netlify.toml
@@ -7,12 +7,9 @@
     X-Content-Type-Options = "nosniff"
     Content-Security-Policy = '''
     default-src 'self';
-
     font-src 'self' fonts.gstatic.com;
-    frame-src 'self';
     img-src 'self' data:;
-    media-src 'self';
-    script-src 'self';
+    script-src 'self' googletagmanager.com;
     style-src 'self' 'unsafe-inline' fonts.googleapis.com;
 
     base-uri 'none';
