Update the jsconfig
- Add 'jsx': 'preserve', to enable intellisense on templates

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./*"]
-    }
+    },
+    "jsx": "preserve"
   },
   "exclude": [".nuxt-storybook", ".nuxt", "dist", "node_modules"]
 }
